fixing skills alignment

--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -34,6 +34,7 @@
     padding: 2rem 0;
     margin: auto;
     overflow-x: scroll;
+    align-items: center;
 }
 
 .skillbox-container:last-child{
